--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -1039,3 +1039,81 @@ a {
         }
     }
 }
+
+
+/*-- -------------------------- -->
+<---      Book Service          -->
+<--- -------------------------- -*/
+#salmon-price-packge {
+    
+    .cs-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 2rem;
+
+        .packge-price-content {
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+            padding: 35px;
+            border-radius: 19px;
+            background-color: #D9D9D9;
+
+            .package-price-item {
+                display: flex;
+                justify-content: space-around;
+                flex-direction: column;
+                background-color: white;
+                width: 295px;
+                height: 240px;
+                border-radius: 26px;
+                padding: 33px;
+
+                .cs-price-title {
+                    color: #145FA4;
+                    font-size: 20px;
+                    line-height: 34px;
+                }
+
+                .cs-price-text {
+                    color: black;
+                    
+                    .price {
+                        color: var(--primary);
+                        font-family: 'Made Soulmaze', 'Trebuchet MS', sans-serif;
+                        font-weight: 400;
+                        font-size: clamp(32px, 4vw, 42px);
+
+                        &.highlight{
+                            color: var(--secondary);
+                        }
+                    }
+                }
+
+                &.active {
+                    background-color: var(--secondary);
+                    
+                    & * {
+                        color: white;
+
+                        .price {
+                            color: white;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+
+    #salmon-price-packge {
+
+        .cs-container {
+            // flex-direction: row;
+        }
+    }
+}
