--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -1066,7 +1066,8 @@ a {
                 justify-content: space-around;
                 flex-direction: column;
                 background-color: white;
-                width: 295px;
+                max-width: 295px;
+                min-width: 286px;
                 height: 240px;
                 border-radius: 26px;
                 padding: 33px;
@@ -1108,12 +1109,14 @@ a {
     }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1024px) {
 
     #salmon-price-packge {
 
         .cs-container {
-            // flex-direction: row;
+            .packge-price-content{
+                flex-direction: column;
+            }
         }
     }
 }
