--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -1108,12 +1108,14 @@ a {
     }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1024px) {
 
     #salmon-price-packge {
 
         .cs-container {
-            // flex-direction: row;
+            .packge-price-content {
+                flex-direction: column;
+            }
         }
     }
 }
